--- a/about.html
+++ b/about.html
@@ -225,19 +225,19 @@
 	    <div class="modal-content">
 	      <div class="modal-header">
 	        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-	        <h4 class="modal-title" id="myModalLabel">contact us</h4>
+	        <h4 class="modal-title" id="myModalLabel">CONTACT US</h4>
 	      </div>
 	      <div class="modal-body">
 		        <div class="row centered">
 		        	<p>We are available 24/7, so don't hesitate to contact us.</p>
 		        	<p>
-		        		Somestreet Ave, 987<br/>
-						London, UK.<br/>
-						+44 8948-4343<br/>
-						hi@blacktie.co
+		        		6748 Wolf Run Road<br/>
+						Wharton, TX 77488<br/>
+						(845) 699-3319<br/>
+						BrightStarAutoSalesWeb@gmail.com
 		        	</p>
 		        	<div id="mapwrap">
-		<iframe height="300" width="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.google.es/maps?t=m&amp;ie=UTF8&amp;ll=52.752693,22.791016&amp;spn=67.34552,156.972656&amp;z=2&amp;output=embed"></iframe>
+		<iframe height="300" width="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyBIgd3tO9cCtTEAxPIaDxMrbToY_mZrcJM&q=6748 Wolf Run Road Wharton, TX 77488"></iframe>
 					</div>	
 		        </div>
 	      </div>
