--- a/services.html
+++ b/services.html
@@ -8,7 +8,7 @@
     <meta name="author" content="">
     <link rel="shortcut icon" href="assets/ico/favicon.png">
 
-    <title>SPOT - Free Bootstrap 3 Theme</title>
+    <title>Bright Star Auto Sales</title>
 
     <!-- Bootstrap core CSS -->
     <link href="assets/css/bootstrap.css" rel="stylesheet">
@@ -36,14 +36,14 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">SP<i class="fa fa-circle"></i>T</a>
+          <a class="navbar-brand" href="#">Bright Star Aut<i class="fa fa-circle"></i> Sales</a>
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
             <li><a href="index.html">HOME</a></li>
             <li><a href="about.html">ABOUT</a></li>
-            <li class="active"><a href="services.html">SERVICES</a></li>
-            <li><a href="works.html">WORKS</a></li>
+            <li class="active"><a href="services.html">INVENTORY</a></li>
+            <li><a href="works.html">TESTIMONIALS</a></li>
             <li><a data-toggle="modal" data-target="#myModal" href="#myModal"><i class="fa fa-envelope-o"></i></a></li>
           </ul>
         </div><!--/.nav-collapse -->
@@ -54,8 +54,8 @@
 		<div class="container">
 			<div class="row centered">
 				<div class="col-lg-8 col-lg-offset-2">
-				<h4>WE CAN DO A LOT OF THINGS</b></h4>
-				<p>JUST TAKE A LOOK & CONTACT US</p>
+				<h4>Imagine Invetory here</b></h4>
+				<p>Okay</p>
 				</div>
 			</div><!-- row -->
 		</div><!-- container -->
@@ -67,19 +67,19 @@
 			<br><br>
 			<div class="col-lg-4">
 				<i class="fa fa-desktop"></i>
-				<h4>WEB DESIGN</h4>
+				<h4>Car 1</h4>
 				<p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form.</p>
 			</div><!-- col-lg-4 -->
 
 			<div class="col-lg-4">
 				<i class="fa fa-cogs"></i>
-				<h4>WEB DEVELOPMENT</h4>
+				<h4>Car 2</h4>
 				<p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form.</p>
 			</div><!-- col-lg-4 -->
 
 			<div class="col-lg-4">
 				<i class="fa fa-eye"></i>
-				<h4>SEO SERVICES</h4>
+				<h4>Car 3</h4>
 				<p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form.</p>
 			</div><!-- col-lg-4 -->
 		</div><!-- row -->
@@ -88,33 +88,33 @@
 			<br><br>
 			<div class="col-lg-4">
 				<i class="fa fa-heart"></i>
-				<h4>SOCIAL MEDIA</h4>
+				<h4>Car 4</h4>
 				<p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form.</p>
 			</div><!-- col-lg-4 -->
 
 			<div class="col-lg-4">
 				<i class="fa fa-shopping-cart"></i>
-				<h4>E-COMMERCE</h4>
+				<h4>Car 5</h4>
 				<p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form.</p>
 			</div><!-- col-lg-4 -->
 
 			<div class="col-lg-4">
 				<i class="fa fa-cloud"></i>
-				<h4>CLOUD SERVICES</h4>
+				<h4>Car 6</h4>
 				<p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form.</p>
 			</div><!-- col-lg-4 -->
 		</div><!-- row -->
 	</div><!-- container -->
 
 
-	<!-- PRICING SECTION -->
+	<!-- PRICING SECTION
 	<div id="dg">
 		<div class="container">
 			<div class="row centered">
 				<h4>PRICING PLANS</h4>
 				<br>
 				<div class="col-lg-4">
-                    <!-- START PRICING TABLE -->
+                    <!-- START PRICING TABLE 
                     <div class="pricing-option">
                         <div class="pricing-top">
                             <span class="pricing-edition">Starter</span>
@@ -132,12 +132,12 @@
                             <li><strong>1-year</strong> Free support *</li>
                         </ul>
                         <a href="index.html#" class="pricing-signup">Sign up</a>
-                    </div><!-- /pricing-option -->
-                    <!-- END PRICING TABLE -->
-				</div><!-- /col -->
+                    </div><!-- /pricing-option 
+                    <!-- END PRICING TABLE 
+				</div><!-- /col 
 				
 				<div class="col-lg-4">
-                    <!-- START PRICING TABLE -->
+                    <!-- START PRICING TABLE 
                     <div class="pricing-option">
                         <div class="pricing-top">
                             <span class="pricing-edition">Standard</span>
@@ -155,12 +155,12 @@
                             <li><strong>2-year</strong> Free support *</li>
                         </ul>
                         <a href="index.html#" class="pricing-signup">Sign up</a>
-                    </div><!-- /pricing-option -->
-                    <!-- END PRICING TABLE -->
-				</div><!-- /col -->
+                    </div><!-- /pricing-option 
+                    <!-- END PRICING TABLE 
+				</div><!-- /col 
 				
 				<div class="col-lg-4">
-                    <!-- START PRICING TABLE -->
+                    <!-- START PRICING TABLE 
                     <div class="pricing-option">
                         <div class="pricing-top">
                             <span class="special-label">OFFER!</span>
@@ -179,11 +179,11 @@
                             <li><strong>5-year</strong> Free support *</li>
                         </ul>
                         <a href="index.html#" class="pricing-signup">Sign up</a>
-                    </div><!-- /pricing-option -->
-                    <!-- END PRICING TABLE -->
-				</div><!-- /col -->
-			</div><!-- row -->
-		</div><!-- container -->
+                    </div><!-- /pricing-option 
+                    <!-- END PRICING TABLE 
+				</div><!-- /col 
+			</div><!-- row 
+		</div><!-- container 
 	</div><!-- DG -->
 
 
@@ -192,8 +192,8 @@
 		<div class="container">
 			<div class="row centered">
 				<div class="col-lg-8 col-lg-offset-2">
-					<h4>WE ARE STORYTELLERS. BRANDS ARE OUR SUBJECTS. DESIGN IS OUR VOICE.</h4>
-					<p>We believe ideas come from everyone, everywhere. At BlackTie, everyone within our agency walls is a designer in their own right. And there are a few principles we believe—and we believe everyone should believe—about our design craft. These truths drive us, motivate us, and ultimately help us redefine the power of design.</p>
+					<h4>1.</h4>
+					<p>2</p>
 				</div>
 			</div><!-- row -->
 		</div><!-- container -->
@@ -218,19 +218,19 @@
 	    <div class="modal-content">
 	      <div class="modal-header">
 	        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-	        <h4 class="modal-title" id="myModalLabel">contact us</h4>
+	        <h4 class="modal-title" id="myModalLabel">CONTACT US</h4>
 	      </div>
 	      <div class="modal-body">
 		        <div class="row centered">
 		        	<p>We are available 24/7, so don't hesitate to contact us.</p>
 		        	<p>
-		        		Somestreet Ave, 987<br/>
-						London, UK.<br/>
-						+44 8948-4343<br/>
-						hi@blacktie.co
+		        		6748 Wolf Run Road<br/>
+						Wharton, TX 77488<br/>
+						(845) 699-3319<br/>
+						BrightStarAutoSalesWeb@gmail.com
 		        	</p>
 		        	<div id="mapwrap">
-		<iframe height="300" width="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.google.es/maps?t=m&amp;ie=UTF8&amp;ll=52.752693,22.791016&amp;spn=67.34552,156.972656&amp;z=2&amp;output=embed"></iframe>
+		<iframe height="300" width="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyBIgd3tO9cCtTEAxPIaDxMrbToY_mZrcJM&q=6748 Wolf Run Road Wharton, TX 77488"></iframe>
 					</div>	
 		        </div>
 	      </div>
