--- a/works.html
+++ b/works.html
@@ -8,7 +8,7 @@
     <meta name="author" content="">
     <link rel="shortcut icon" href="assets/ico/favicon.png">
 
-    <title>SPOT - Free Bootstrap 3 Theme</title>
+    <title>Bright Star Auto Sales</title>
 
     <!-- Bootstrap core CSS -->
     <link href="assets/css/bootstrap.css" rel="stylesheet">
@@ -36,20 +36,19 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">SP<i class="fa fa-circle"></i>T</a>
+          <a class="navbar-brand" href="#">Bright Star Aut<i class="fa fa-circle"></i> Sales</a>
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
             <li><a href="index.html">HOME</a></li>
             <li><a href="about.html">ABOUT</a></li>
-            <li><a href="services.html">SERVICES</a></li>
-            <li class="active"><a href="works.html">WORKS</a></li>
+            <li><a href="services.html">INVENTORY</a></li>
+            <li class="active"><a href="works.html">TESTIMONIALS</a></li>
             <li><a data-toggle="modal" data-target="#myModal" href="#myModal"><i class="fa fa-envelope-o"></i></a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
     </div>
-
 	<div id="blue">
 		<div class="container">
 			<div class="row centered">
@@ -147,26 +146,26 @@
 	</div><!-- Footer -->
 
 
-	<!-- MODAL FOR CONTACT -->
+<!-- MODAL FOR CONTACT -->
 	<!-- Modal -->
 	<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
 	  <div class="modal-dialog">
 	    <div class="modal-content">
 	      <div class="modal-header">
 	        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-	        <h4 class="modal-title" id="myModalLabel">contact us</h4>
+	        <h4 class="modal-title" id="myModalLabel">CONTACT US</h4>
 	      </div>
 	      <div class="modal-body">
 		        <div class="row centered">
 		        	<p>We are available 24/7, so don't hesitate to contact us.</p>
 		        	<p>
-		        		Somestreet Ave, 987<br/>
-						London, UK.<br/>
-						+44 8948-4343<br/>
-						hi@blacktie.co
+		        		6748 Wolf Run Road<br/>
+						Wharton, TX 77488<br/>
+						(845) 699-3319<br/>
+						BrightStarAutoSalesWeb@gmail.com
 		        	</p>
 		        	<div id="mapwrap">
-		<iframe height="300" width="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.google.es/maps?t=m&amp;ie=UTF8&amp;ll=52.752693,22.791016&amp;spn=67.34552,156.972656&amp;z=2&amp;output=embed"></iframe>
+		<iframe height="300" width="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyBIgd3tO9cCtTEAxPIaDxMrbToY_mZrcJM&q=6748 Wolf Run Road Wharton, TX 77488"></iframe>
 					</div>	
 		        </div>
 	      </div>
